src/objects/Feedback_Data__c.object
<CustomObject>
    <fields>
        <fullName>Feedback_Name__c</fullName>
        <label>Feedback Name</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group_Name__c</fullName>
        <label>Group Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Question_Name__c</fullName>
        <label>Question Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating__c</fullName>
        <label>Rating</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Roll_Number__c</fullName>
        <label>Student Roll Number</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Feedback Data</label>
    <nameField>
        <displayFormat>FBData-{000000}</displayFormat>
        <label>Feedback Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Feedback Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>